# FutureSDR

./: .gitignore  Cargo.toml
examples/end-to-end/: README.md
examples/end-to-end/backend/: Cargo.toml  Makefile
examples/end-to-end/backend/migrations/: 20220701103404_create_data_storage_table.sql
examples/end-to-end/backend/src/: application.rs  frontend_api.rs  frontend_serve.rs  main.rs  node_api.rs
examples/end-to-end/backend/src/frontend_api/: historical.rs  nodes.rs  realtime.rs
examples/end-to-end/backend/src/node_api/: control.rs  data.rs
examples/end-to-end/control_worker/: Cargo.toml  package.json
examples/end-to-end/control_worker/src/: lib.rs  ws_tasks.rs
examples/end-to-end/fft_worker/: Cargo.toml  Makefile  package.json
examples/end-to-end/fft_worker/src/: lib.rs  wasm.rs
examples/end-to-end/frontend/: Cargo.toml  Makefile  package.json  serve.py
examples/end-to-end/frontend/assets/static/: index.html
examples/end-to-end/frontend/src/: lib.rs
examples/end-to-end/hackrf-node/: Cargo.toml  Makefile  package.json
examples/end-to-end/hackrf-node-webworker/: Cargo.toml  Makefile
examples/end-to-end/hackrf-node-webworker/assets/static/: index.html  worker.js
examples/end-to-end/hackrf-node-webworker/src/: lib.rs  node_id.rs  wasm.rs  worker.rs
examples/end-to-end/hackrf-node/assets/static/: index.html
examples/end-to-end/hackrf-node/src/: lib.rs  wasm.rs
examples/end-to-end/node/: Cargo.toml
examples/end-to-end/recorded/: Cargo.toml  Gulpfile.js  Makefile
examples/end-to-end/recorded-node/: Cargo.toml  Makefile
examples/end-to-end/recorded-node-webworker/: Makefile
examples/end-to-end/recorded-node-webworker/assets/static/: index.html
examples/end-to-end/recorded-node-webworker/src/: lib.rs
examples/end-to-end/recorded-node/assets/static/: index.html
examples/end-to-end/recorded-node/src/: wasm.rs
examples/end-to-end/recorded/assets/static/: index.html
examples/end-to-end/recorded/src/: wasm.rs
examples/end-to-end/shared-utils/: Cargo.toml
examples/end-to-end/shared-utils/src/: command_protocol.rs  config.rs  data_worker.rs  frontend_protocol.rs  lib.rs  worker.rs  worker_protocol.rs
examples/end-to-end/wip/: Cargo.toml  Makefile
examples/end-to-end/wip/assets/static/: index.html
examples/end-to-end/wip/node/: Cargo.toml  Gulpfile.js  Makefile  README.md  package.json
examples/end-to-end/wip/node/assets/static/: index.html  index.js  new_worker.js  worker.js
examples/end-to-end/wip/node/src/: lib.rs
examples/end-to-end/wip/src/: wasm.rs
examples/spectrum/: Makefile
examples/spectrum/assets/static/: index.html
examples/spectrum/src/: wasm.rs
examples/zigbee/: Makefile
frontend/: Makefile
src/blocks/: fft.rs  mod.rs  wasm_sdr.rs  wasm_ws_sink.rs
