[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
axum = {version = "0.5.7", features = ["ws", "headers"]}
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3", features = ["fs", "trace", "cors", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = ["macros", "migrate", "postgres", "runtime-tokio-rustls"]
