[package]
name = "fft-worker"
version = "0.1.0"
authors = ["arctic-alpaca <67190338+arctic-alpaca@users.noreply.github.com>"]
edition = "2021"

[workspace]

[features]
include_main = []

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
futuresdr = { path = "../../.." }
web-sys ={version = "=0.3.58", features = ["WorkerOptions", "WorkerType", "console"]}
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.28"
gloo-worker = "0.2.0"
gloo-utils = "0.1.4"
serde = "1.0"
serde-wasm-bindgen = "0.4.3"
shared-utils = {path = "../shared-utils"}
uuid = {version = "1.1.2", features = ["v4", "js"]}
