[package]
name = "hackrf_node_webworker"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
futuresdr = { path = "../../.." }
web-sys ={version = "0.3.58", features = ["WorkerOptions", "WorkerType", "console"]}
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.28"
# gloo-worker = "0.2.0"
gloo-worker = {git="https://github.com/arctic-alpaca/gloo"}
gloo-utils = "0.1.4"
lazy_static = "1.4.0"
serde = "1.0"
serde-wasm-bindgen = "0.4.3"
uuid = {version = "1.1.2", features = ["v4", "js"]}
