[package]
name = "recorded_node"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
log = "0.4.17"
console_log = "0.2.0"
futuresdr = { path = "../../.." }
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.28"
byteorder = "1"
