[package]
name = "wip"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cpu"
required-features = ["cpu"]

[[bin]]
name = "vulkan"
required-features = ["cpu", "vulkan"]

[features]
default = []
cpu = [ "futuresdr/soapy" ]
vulkan = [ "futuresdr/vulkan", "vulkano", "vulkano-shaders"]
wgpu = [ "futuresdr/wgpu" ]

[dependencies]
log = "0.4.17"
console_log = "0.2.0"
futuresdr = { path = "../../.." }
vulkano = { version = "0.29.0", optional = true }
vulkano-shaders = { version = "0.29.0", optional = true }
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.28"
byteorder = "1"
