[package]
name = "node"
version = "0.1.0"
edition = "2021"

[workspace]
[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = "1"
console_error_panic_hook = { version = "0.1.7"}
futuresdr = { path = "../../.." }
gloo-timers = {version = "0.2.4", features = ["futures"]}
js-sys = "0.3.57"
serde = {version ="1.0.137", features = ["derive"]}
serde_json = "1.0.80"
wasm-bindgen = {version = "0.2.80", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.30"

lazy_static = "1.4.0"
flume = "0.10.13"


[dependencies.web-sys]
version = "0.3.57"
features = [
    'console',
    'Document',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
    'DedicatedWorkerGlobalScope',
    'WorkerGlobalScope',
    'WorkerOptions',
    'WorkerType'
]
